kubernetes/manifests/overlays/localhost/ingress-manifests/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-microk8s-controller
  namespace: ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
      nodePort: 30080
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
      nodePort: 30443
  selector:
    name: argocd-server-ingress
